# pika-plot

./: .gitignore  ACTION_PLAN.md  BUILD_AND_RUN.md  BUILD_SUCCESS.md  Cargo.toml  DEVELOPMENT_SESSION_SUMMARY.md  FUNCTIONALITY_VERIFICATION.md  LICENSE  PROBLEMS_AND_SOLUTIONS.md  README.md  RESTRUCTURING_PLAN.md  demo_all_features.rs  demo_ultimate_features.py  mixed_data_types.csv  run.bat  run.sh  test_duplicate_detection.rs  with_nulls.csv
arrow-report/: README.md  actual_test.html  comprehensive_test.html  create_simple_arrow.py  create_test_arrow.py  debug.html  end_to_end_test.js  index.html  run_tests.js  simple_test.arrow  simple_timeseries.arrow  test.html  test_arrow_functionality.js  test_arrow_loading.html  test_arrow_parsing.html  test_data.arrow  test_html_functionality.js  test_libs.html  test_real_arrow.js  test_working.js  time_series_data.arrow  validate_arrow.js  working_arrow_test.html
docs/: ARCHITECTURE_COMPARISON.md  ARCHITECTURE_PATTERNS.md  ARCHITECTURE_SUMMARY.md  AVAILABLE_PLOT_TYPES.md  BUILD_VERIFICATION_REPORT.md  CANVAS_FUNCTIONALITY.md  CODE_QUALITY_ASSESSMENT.md  CODE_QUALITY_GUIDE.md  CRITICAL_PATH.md  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  FINAL_BUILD_STATUS.md  FINAL_SUCCESS_REPORT.md  FUNCTIONAL_TEST_CHECKLIST.md  ID_CONFLICT_FIX_SUMMARY.md  IMPLEMENTATION_STATUS.md  OVERVIEW.md  PERFORMANCE_OPTIMIZATIONS.md  PLOT_SYSTEM_SUMMARY.md  PROJECT_ORGANIZATION.md  README.md  TEST_AND_VALIDATION_SUMMARY.md  UI_COMPONENT_GUIDE.md  UX_IMPLEMENTATION_SUMMARY.md  VISION.md  implementation_progress.md
engine_experiments/: analysis.rs  chaos_visualization.rs  memory.rs  neural_networks.rs  plot_aggregation.rs  predictive_analytics.rs  spatial_indexing.rs  streaming.rs
fixtures/: README.md  medium.csv  small.csv
fresh/: Cargo.toml  PLOT_GUIDE.md  PROJECT_CLEANUP_SUMMARY.md  README.md  VALIDATION_SUMMARY.md  test_data.csv  test_duplicate_detection.rs  test_numeric.csv
fresh/src/: lib.rs  main.rs
fresh/src/app/: mod.rs  state.rs
fresh/src/core/: csv_handler.rs  database.rs  duplicate_detector.rs  error.rs  mod.rs  query.rs  transformations.rs
fresh/src/infer/: mod.rs
fresh/src/ui/: csv_import.rs  data_transformation.rs  duplicate_detection.rs  export_dialog.rs  file_config.rs  gpu_renderer.rs  home_screen.rs  mod.rs  multi_csv_import.rs  plot_window.rs  query_window.rs  sidebar.rs  theme.rs
fresh/src/ui/plots/: anomaly.rs  bar.rs  box_plot.rs  candlestick.rs  contour.rs  correlation.rs  data_processor.rs  distribution.rs  enhanced_config.rs  geo.rs  heatmap.rs  histogram.rs  line.rs  mod.rs  network.rs  parallel_coordinates.rs  polar.rs  radar.rs  sankey.rs  scatter.rs  scatter3d.rs  stream.rs  sunburst.rs  surface3d.rs  time_analysis.rs  treemap.rs  utils.rs  violin.rs  violin.rs.new  violin_config.rs
fresh/src/ui/shaders/: line.wgsl  point.wgsl  shape.wgsl
fresh/test_data/: COMPREHENSIVE_TESTING_SUMMARY.md  README.md  TEST_DATASET_DOCUMENTATION.md  generate_large_test_data.py  generate_medium_dataset.sh  mixed_data_types.csv  simple_duplicates.csv  test_complex.csv  test_csv_import.rs  test_medium_complex.csv  test_medium_complex_full.csv  with_nulls.csv
fresh/tests/: integration_test.rs
frog-viz/: WINDOWS_BUILD_GUIDE.md
pika-app/: Cargo.toml
pika-app/src/: main.rs
pika-app/tests/: end_to_end_test.rs  integration_test.rs
pika-cli/: Cargo.toml
pika-cli/src/: comprehensive_plot_export_test.rs  main.rs  test_plot_exports.rs
pika-core/: Cargo.toml
pika-core/src/: error.rs  events.rs  lib.rs  node.rs  nodes.rs  plots.rs  snapshot.rs  types.rs  workspace.rs
pika-core/src/nodes/: mod.rs
pika-core/src/utils/: mod.rs  windows_fs.rs
pika-core/tests/: integration_test.rs
pika-engine/: Cargo.toml
pika-engine/benches/: benchmarks.rs  data_extraction_bench.rs  query_bench.rs
pika-engine/src/: advanced_ml.rs  advanced_visualization.rs  aggregation.rs  automated_insights.rs  cache.rs  chaos_visualization.rs  collaboration.rs  csv.rs  database.rs  enhanced_csv.rs  error.rs  feature_engineering.rs  gpu_acceleration.rs  graph_analysis.rs  import.rs  jupyter_integration.rs  lib.rs  memory.rs  memory_coordinator.rs  query.rs  streaming.rs  workspace.rs
pika-engine/src/database/: streaming.rs
pika-engine/src/gpu/: mod.rs  pipelines.rs
pika-engine/src/gpu/shaders/: aggregation.wgsl  density_map.wgsl  mod.rs
pika-engine/src/plot/: data_extractor.rs  mod.rs  renderer.rs
pika-engine/src/shaders/: aggregation.wgsl  plot.wgsl
pika-engine/tests/: engine_test.rs  integration_tests.rs
pika-traits/: Cargo.toml
pika-ui/: Cargo.toml
pika-ui/benches/: canvas_bench.rs
pika-ui/src/: advanced_widgets.rs  app.rs  canvas.rs  export.rs  lib.rs  notifications.rs  renderer.rs  shortcuts.rs  state.rs  theme.rs  tooltip_ext.rs  workspace.rs
pika-ui/src/export/: mod.rs  plot_export.rs
pika-ui/src/nodes/: mod.rs  plot_node.rs  query_node.rs  table_node.rs
pika-ui/src/panels/: canvas.rs  canvas_panel.rs  canvas_toolbar.rs  data.rs  data_sources.rs  grid_view.rs  mod.rs  properties.rs  status_bar.rs
pika-ui/src/plots/: bar_plot.rs  box_plot.rs  correlation_plot.rs  enhanced_scatter_plot.rs  heatmap_plot.rs  histogram_plot.rs  line_plot.rs  mod.rs  plot_renderer.rs  radar_plot.rs  scatter_plot.rs  time_series_plot.rs  violin_plot.rs
pika-ui/src/screens/: file_config.rs  mod.rs
pika-ui/src/widgets/: basic_csv_import.rs  data_table.rs  drag_drop.rs  enhanced_csv_import.rs  file_import_dialog.rs  memory_dialog.rs  mod.rs  node_editor.rs  pebble_csv_import.rs  plot_config.rs  professional_csv_import.rs  progress_indicator.rs  simple_csv_dialog.rs  simple_csv_import.rs  working_csv_import.rs
pika-ui/src/workspace/: mod.rs  notebook.rs  report_styles.css  reporting.rs  save_load.rs
pika-ui/tests/: TEST_SUMMARY.md  canvas_drawing_test.rs  canvas_test.rs  integration_test.rs  plot_export_test.rs  ui_test.rs
test_data/: comprehensive_test_data.csv  customer_data.csv  generate_large_dataset.py  large_dataset.csv  mixed_data.csv  performance_test.csv  sales_data.csv  sample_sales.csv  simple_duplicates.csv
(+190 files in other folders)
