[workspace]
resolver = "2"
members = [
    "pika-core",
    "pika-engine", 
    "pika-ui",
    "pika-app",
    "pika-cli",
]

[workspace.package]
version = "0.1.0"
authors = ["Pika-Plot Contributors"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/user/pika-plot"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Data processing
# We use duckdb's arrow re-export to avoid version conflicts
duckdb = { version = "1.3", features = ["bundled"] }
chrono = { version = "0.4.41", features = ["serde"] }

# UI dependencies  
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["wgpu", "accesskit"] }
egui-wgpu = "0.28"
wgpu = "0.20"
bytemuck = { version = "1.14", features = ["derive"] }

# Plotting
egui_plot = "0.28"

# Graph algorithms
petgraph = "0.6"

# Spatial indexing
rstar = "0.11"

# Memory pooling
crossbeam = "0.8"

# Async/concurrency
flume = "0.11"
dashmap = "5.5"
parking_lot = "0.12"

# Caching
moka = { version = "0.12", features = ["future", "sync"] }

# Utilities
num_cpus = "1.16"
humansize = "2.1"
rfd = "0.14"

# File formats
csv = "1.3"
png = "0.17"
arrow = "55.0"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# Platform-specific dependencies
windows = { version = "0.52", features = [
    "Win32_System_SystemInformation", 
    "Win32_System_Memory",
    "Win32_Graphics_Dxgi",
]}

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
