[workspace]
members = [
    "pika-core",
    "pika-engine", 
    "pika-ui",
    "pika-cli",
    "pika-app",
    "pika-traits",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Pika-Plot Contributors"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/user/pika-plot"

[workspace.dependencies]
flume = "0.11"
once_cell = "1.19"
regex = "1.10"
rayon = "1.8"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4.34", features = ["serde"] }
rand = "0.8.5"
dunce = "1.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Basic CSV processing (alternative to polars)
csv = "1.3"

# File dialogs - needed for CSV import
rfd = "0.14"

# UI framework - stable versions
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }
egui-winit = "0.28"
egui-wgpu = "0.28"
eframe = "0.28"
egui_plot = "0.28"
winit = "0.29"
image = { version = "0.24", features = ["png", "jpeg"] }

# Basic visualization
plotters = { version = "0.3", features = ["bitmap_backend", "svg_backend"] }
resvg = "0.37"
tiny-skia = "0.11"

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
comfy-table = "7.1"
num_cpus = "1.16"

# File system and I/O
notify = "6.1"
walkdir = "2.5"
tempfile = "3.8"

# Basic GPU support for canvas
bytemuck = "1.14"
wgpu = "0.19"

# Math and data structures
ndarray = "0.15.6"
petgraph = "0.6.4"

# WASM support (for potential future web deployment)
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
js-sys = "0.3"
web-sys = "0.3"

# Platform-specific dependencies
windows = { version = "0.52", features = [
    "Win32_System_SystemInformation", 
    "Win32_System_Memory",
]}

# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
