[package]
name = "fresh"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
egui_plot = "0.29"
image = { version = "0.25", features = ["png"] }
rfd = "0.15"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
datafusion = { version = "39.0", features = ["pyarrow"] }
arrow = { version = "=51.0.0", default-features = false, features = ["ipc"] }
chrono = { version = "=0.4.39", default-features = false }
tokio = { version = "1.0", features = ["full"] }
indexmap = "2.10.0"
rand = "0.9.1"

# GPU acceleration dependencies
wgpu = "0.20"
winit = "0.30"
glam = "0.27"
bytemuck = { version = "1.15", features = ["derive"] }
pollster = "0.3"





[[bin]]
name = "test_time_detection"
path = "test_data/test_time_detection.rs"

[[bin]]
name = "test_time_normalization"
path = "test_data/test_time_normalization.rs"

[[bin]]
name = "test_fixes"
path = "test_data/test_fixes.rs"

[[bin]]
name = "test_ui_fixes"
path = "test_data/test_ui_fixes.rs"

[[bin]]
name = "debug_table_height"
path = "test_data/debug_table_height.rs"

[[bin]]
name = "test_height_fixes"
path = "test_data/test_height_fixes.rs"

[[bin]]
name = "test_time_display"
path = "test_data/test_time_display.rs"

[[bin]]
name = "debug_time_import"
path = "test_data/debug_time_import.rs"

[[bin]]
name = "test_csv_import_debug"
path = "test_data/test_csv_import_debug.rs"

[profile.release]
opt-level = 3
lto = true 
