[package]
name = "pika-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pika-plot"
path = "src/main.rs"

[dependencies]
# Core dependencies
pika-core = { path = "../pika-core" }
pika-ui = { path = "../pika-ui" }
pika-engine = { path = "../pika-engine" }

# UI framework
eframe = { workspace = true }
egui = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
