[package]
name = "pika-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "pika"
path = "src/main.rs"

[dependencies]
# Local crates
pika-core = { path = "../pika-core" }
pika-engine = { path = "../pika-engine" }

# CLI parsing
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Progress bars
indicatif = { workspace = true }

# Table output
comfy-table = { workspace = true }

# System info
num_cpus = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Plotting
plotters = { workspace = true }

# Basic CSV processing instead of duckdb for now
csv = { workspace = true }
