[package]
name = "pika-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
dunce = { workspace = true }

# Basic CSV processing instead of duckdb/polars for now
csv = { workspace = true }

# UI types (needed for egui types in traits)
egui = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }

# System information
num_cpus = "1.0"

[dev-dependencies]
tempfile = "3.9"
