[package]
name = "pika-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
pika-core = { path = "../pika-core" }
duckdb = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
futures = "0.3"
egui = { workspace = true }
egui-wgpu = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
moka = { workspace = true }
sysinfo = "0.30"
anyhow = { workspace = true }
ron = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { workspace = true }

[[bench]]
name = "data_extraction_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false
