[package]
name = "pika-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
pika-core = { path = "../pika-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# Basic CSV processing instead of duckdb/polars for now
csv = { workspace = true }
regex = { workspace = true }

# Basic data structures
ndarray = { workspace = true }
petgraph = { workspace = true }

# WASM support (optional)
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures"]
distributed = []

[dev-dependencies]
tempfile = "3.8"
criterion = { workspace = true }

[[bench]]
name = "data_extraction_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false
