[package]
name = "pika-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
num_cpus = "1.16"
pika-core = { path = "../pika-core" }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4.34"
rayon = "1.8.1"
futures = "0.3.30"
parking_lot = "0.12.1"
csv = "1.3"
regex = "1.10.3"
once_cell = "1.19"
ndarray = "0.15.6"
petgraph = "0.6.4"
wasm-bindgen = { version = "0.2.91", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
burn = { version = "0.13", optional = true }
candle-core = { version = "0.6", optional = true }
flume = "0.11"

[features]
default = []
advanced = ["burn", "candle-core"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures"]
distributed = []

[dev-dependencies]
tempfile = "3.8"
criterion = { workspace = true }

[[bench]]
name = "data_extraction_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false
