[package]
name = "pika-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
pika-core = { path = "../pika-core" }
pika-engine = { path = "../pika-engine" }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui_plot = { workspace = true }
eframe = { workspace = true }
arrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rfd = { workspace = true }
image = "0.24"
humansize = "2.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true }
uuid = { version = "1.5", features = ["v4", "serde"] }
anyhow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "canvas_bench"
harness = false
