[package]
name = "pika-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
pika-core = { path = "../pika-core" }
pika-engine = { path = "../pika-engine" }
pika-traits = { path = "../pika-traits" }

# UI framework
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui_extras = { workspace = true }
eframe = { workspace = true }
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true }
egui_plot = { workspace = true }

# Enhanced visualization and plotting
plotters = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
image = { workspace = true }

# Basic CSV processing
csv = { workspace = true }

# File dialogs
rfd = { workspace = true }

# Core utilities
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
flume = { workspace = true }
once_cell = { workspace = true }

# File system
notify = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }

# WASM support (optional)
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
gpu = ["wgpu"]
collaboration = []

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "canvas_bench"
harness = false
path = "benches/canvas_bench.rs"
